css/styles.css
 * {
    padding: 0;
    margin: 0;
    font-family: courier;
}

body {
    background: url(img/backgroundgrey2.png);
    background-position: fixed;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

h3 {
    margin: 20px;
    color:#b7faff;
}

#logo {
    position: absolute;
    right: 15px;
    bottom: 15px;
    z-index: 1;
    width: 109px;
}

#about {
    color:white;
    position:absolute;
    top: 40px;
    left: 45px;
    font-size: 16px;
    z-index: 5000;

}

#about::before {
    position: absolute;
    top: 5px;
    content: ' ';
    background: #671d95;
    width: 45%;
    z-index: -1;
    height: 20px;
    -webkit-transition: 100ms linear;
    -o-transition: 100ms linear;
    -moz-transition: 100ms linear;
    transition: 100ms linear;

}

#contact {
    color:white;
    position:absolute;
    top: 80px;
    left: 45px;
    font-size: 16px;
    z-index: 5000;
}


#contact, #about {
    background: #671d95;
    padding: 3px;
}

.clicked #contact::before {
    width: 120%;
}

#contact::before {
    position: absolute;
    top: 5px;
    content: ' ';
    background: #671d95;
    width: 45%;
    z-index: -1;
    height: 20px;
    -webkit-transition: 100ms linear;
    -o-transition: 100ms linear;
    -moz-transition: 100ms linear;
    transition: 100ms linear;
}

#contact-form {
    background: #1f231fe6;
    position: relative;
    top: 0;
    transform: translate(0%, -300%);
    -webkit-transition: 550ms linear;
    -o-transition: 550ms linear;
    -moz-transition: 550ms linear;
    transition: 550ms linear;

}

#two {
    background: url(img/presley.jpg);
    background-position: fixed;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
    top: 0;
    transform: translate(100%, -100%);
    -webkit-transition: 550ms linear;
    -o-transition: 550ms linear;
    -moz-transition: 550ms linear;
    transition: 550ms linear;

}

.about-clicked #two {
    -webkit-transform: translate(0%, -100%);
    -moz-transform: translate(0%, -100%);
    -o-transform: translate(0%, -100%);
    transform: translate(0%, -100%);
    -webkit-transition: 550ms linear;
    -o-transition: 550ms linear;
    -moz-transition: 550ms linear;
    transition: 550ms linear;
} 

.about-clicked #welcome {
    -webkit-transform: translateX(-100%);
    -moz-transform: translateX(-100%);
    -o-transform: translateX(-100%);
    transform: translateX(-100%);
    -webkit-transition: 550ms linear;
    -o-transition: 550ms linear;
    -moz-transition: 550ms linear;
    transition: 550ms linear;
}

.about-clicked #contact-form {
    -webkit-transform: translate(0%, -300%);
    -moz-transform: translate(0%, -300%);
    -o-transform: translate(0%, -300%);
    transform: translate(0%, -300%);
    -webkit-transition: 550ms linear;
    -o-transition: 550ms linear;
    -moz-transition: 550ms linear;
    transition: 550ms linear;

}

.side-clicked #contact-form {
    -webkit-transform: translate(0%, -200%);
    -moz-transform: translate(0%, -200%);
    -o-transform: translate(0%, -200%);
    transform: translate(0%, -200%);
    -webkit-transition: 550ms linear;
    -o-transition: 550ms linear;
    -moz-transition: 550ms linear;
    transition: 550ms linear;
}

.side-clicked #welcome {
    -webkit-transform: translateY(100%);
    -moz-transform: translateY(100%);
    -o-transform: translateY(100%);
    transform: translateY(100%);
    -webkit-transition: 550ms linear;
    -o-transition: 550ms linear;
    -moz-transition: 550ms linear;
    transition: 550ms linear;
}

.side-clicked #two {
    -webkit-transform: translate(100%, -100%);
    -moz-transform: translate(100%, -100%);
    -o-transform: translate(100%, -100%);
    transform: translate(100%, -100%);
    -webkit-transition: 550ms linear;
    -o-transition: 550ms linear;
    -moz-transition: 550ms linear;
    transition: 550ms linear;

}

.about-clicked #about, .about-clicked #about::before {
    background: red;
}

.side-clicked #contact, .side-clicked #contact::before  {
    background: red;
}

.side-clicked #logo {
    z-index: 0;
}
#about:hover {
    cursor: default;
    -webkit-transition: 100ms linear;
    -o-transition: 100ms linear;
    -moz-transition: 100ms linear;
    transition: all 100ms linear;
}

#about:hover::before {
    content:' ';
    -webkit-transition: 100ms linear;
    -o-transition: 100ms linear;
    -moz-transition: 100ms linear;
    transition: all 100ms linear;
    width: 130%;
    height: 20px;
}

#contact:hover::before {
    content:' ';
    -webkit-transition: 100ms linear;
    -o-transition: 100ms linear;
    -moz-transition: 100ms linear;
    transition: all 100ms linear;
    width: 130%;
    height: 20px;
}

#contact:hover {
    cursor: default;
}

#menu-tag {
    text-align: center;
    font-size: 10px;
    color: white;
}

.clicked #menu-tag p {
    display: none;
}

#nav-menu {
    position: fixed;
    height: 40px;
    width: 100%;
    top: 129px;
    background: rgba(24, 21, 24, 0.92);
    z-index: 1000;
    -webkit-transform: translateY(-100%);
    -moz-transform: translateY(-100%);
    -o-transform: translateY(-100%);
    transform: translateY(-100%);
    -webkit-transform: translateY(-100%);
    -webkit-transition: all 550ms ease-in-out;
    -moz-transition: all 550ms ease-in-out;
    -o-transition: all 550ms ease-in-out;
    transition: all 550ms ease-in-out;
}

#nav-index {
    float: right;
    list-style: none;
}

.nav-list {
    position: relative;
    display: inline-block;
    z-index: 1001;
    -webkit-transform: translateY(-100%);
    -moz-transform: translateY(-100%);
    -o-transform: translateY(-100%);
    transform: translateY(-100%);
    -webkit-transition: 550ms linear;
    -o-transition: 550ms linear;
    -moz-transition: 550ms linear;
    transition: all 550ms ease-in-out;
    font-family: helvetica;
}
/* ... */

